--- a/estore/src/main/resources/application.properties
+++ b/estore/src/main/resources/application.properties
@@ -1,12 +1,4 @@
 # Database Configuration
 spring.application.name=estore
-spring.datasource.url=jdbc:mysql://localhost/estore_db?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=@zx12cv36
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Hibernate/JPA Properties
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.profiles.active=dev
+spring.config.import=secret.properties
